# beyond-alarm

./: .gitignore  README.md  pyproject.toml
app_data/web_radio/: web_radio.json
backend/src/web_radio/: router.py
config/: bak.config.json  config.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: api.ts
frontend/src/api/web_radio/: getRadios.ts
frontend/src/components/Home/: Home.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/types/: Radio.ts
scripts/: .env  main.py  main.sh  manager.py  schemas.py  services.py
settings_manager/src/: main.py
settings_manager/src/web_radio/: router.py  schemas.py  services.py
