[tool.poetry]
name = "beyond-alarm"
version = "0.1.0"
description = ""
authors = ["Jeremy Tarrieu <jeremy.tarrieu.ext@veolia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"
aiohttp = "^3.10.9"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
